--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
-/* Add styles here */
+
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;
+}
